--- a/src/App.scss
+++ b/src/App.scss
@@ -34,6 +34,7 @@
   border: 0.2px solid rgba(0, 0, 0, 0.2);
   align-items: center;
   padding: 10px 5px;
+  justify-content: space-between;
 
   .old-price {
     text-decoration: line-through;
@@ -61,7 +62,10 @@
     }
   }
   @media only screen and (min-width: 900px) {
+    width: 80%;
     padding: 20px;
+    display: flex;
+    justify-content: space-between;
   }
 }
 .drug-name,
